# amphitude

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  build.bat  build.sh  run_docker.sh
include/: Constants.h  Game.h  NetworkManager.h  Player.h  Structs.h  StunClient.h  UPnPMapper.h  Utils.h
packaging/: create_linux_bundle.sh  create_mac_bundle.sh
server/: build.sh  main.cpp  server_app
src/: Game.cpp  Player.cpp  StunClient.cpp  UPnPMapper.cpp  Utils.cpp  main.cpp
